# coc-keeper-runtime

./: .gitignore  README.md  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  vC.1.3-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md  TESTING_GAP_ANALYSIS.md
.planning/milestones/: v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  vC.1.3-ROADMAP.md
src/dm_bot/: main.py
tests/: conftest.py  test_chaos_lobby_stress.py  test_character_profile_projection.py  test_coc_rules_flow.py  test_combat_resolution_flow.py  test_commands.py  test_complex_graphs.py  test_diagnostics.py  test_discord_commands.py  test_dual_model_orchestration.py  test_e2e_15turn_scenario.py  test_e2e_lifecycle.py  test_feedback_delivery.py  test_fuzhe_adventure_loader.py  test_gameplay_integration.py  test_identity_models.py  test_instance_management.py  test_intent_routing.py  test_investigator_panels.py  test_lobby_flow.py  test_multi_user_round_collection.py  test_multi_user_session.py  test_narration_pipeline_flow.py  test_narration_service.py  test_narration_streaming_flow.py  test_natural_message_runtime.py  test_persistence_store.py  test_phase2_integration.py  test_pushed_roll_flow.py  test_ready_commands.py  test_ready_gate.py  test_restart_system.py  test_room_transitions_and_reveals.py  test_router_service_flow.py  test_rules_engine.py  test_smoke_check.py  test_trigger_chains.py  test_turns.py  test_v18_archive_builder.py
(+144 files in other folders)
