[project]
name = "dm-bot"
version = "0.1.0"
description = "Discord-native local AI DM runtime"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "d20>=1.1.2",
  "discord.py>=2.7.0",
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "openai>=2.0.0",
  "orjson>=3.11.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "structlog>=25.0.0",
  "tenacity>=9.1.0",
  "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
  "pytest>=9.0.0",
  "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dm_bot"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
